- refactoring for hexagonal architecture - refactoring to use object properties rather than @value - refactoring to use CompletableFuture and virtual threads for optimization purpose